"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-01-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-39:
	  haco: fix ICE-on-invalid crash on duplicate typedef.
	  Test case added.


2011-01-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-38:
	  hacprsim: reset/initialize now unset/thaw/unfreeze nodes (fixed).
	  Test case added.


2011-01-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-37:
	  CHP front end fixes:
		in some CHP statement error conditions, throw exception
		instead of returning NULL, b/c NULL is interpreted as
		a 'skip' action.  This fixes various accept-invalid bugs.
	  Object/expr/int_expr.h:
		re-declare abstract virtual override for accept(visitor&),
		fixes self-recursion bug exhbited by 
		int_negation_expr::accept.
	  Test cases added and updated.


2011-01-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-36:
	  hacprsim: new commands:
		set <node> ? -- sets node to 0 or 1 randomly
		set-pair-random node1 node2 -- sets pair of nodes
			to opposite values randomly.
	  Documented, test cases added (random).


2011-01-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-35:
	  Added new family of commands to assert the absence of nodes
		with specific statuses/criteria (always fatal error).
		new commands:
		no-status, no-status-interference, no-unused-nodes,
		no-unknown-inputs, no-unknown-inputs-fanout, 
		no-unknown-undriven-fanin, no-unknown-outputs,
		no-unknown-fanout.
	  Documented, test cases added.


2010-12-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-34:
	  hacprsim: added support for signed binary integer interpretation
		of radix-2 bundled channels.
	  New commands: channel-signed, channel-unsigned.
	  Documented, test cases added.

