@@ -1,0 +1,5 @@
+FATAL: reference to process c1of<2> with out-of-bounds indices [3]:[3]
+ERROR: unrolling aliases.
+Error resolving a single instance alias.
+Error referencing channel `Z' structure members.
+... at line 5
